<?xml version="1.0"?>
<package format="2">
  <name>slam</name>
  <version>1.0.0</version>
  <description>Point Cloud based SLAM</description>
  <maintainer email="steffef@ntnu.no">Steffen Folåsen</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>

</package>
