<?xml version="1.0"?>
<package format="2">
  <name>slam_eval</name>
  <version>1.0.0</version>
  <description>Live plotter of poses</description>
  <maintainer email="steffef@ntnu.no">Steffen Folåsen</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
